# tulu-openclaw-v2

./: .dockerignore  .git_commit_msg.txt  .gitattributes  .gitignore  .gitmsg.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.vi.md  README.zh-TW.md  SECURITY.md  _dev_server.js  _fix_fmt.py  _replace_sniff.py  analyze-line.cjs  check_ids.py  check_model.py  commit-fix.sh  docker-compose.yml  find-bytes.cjs  fix-bytes2.cjs  fix-complete.cjs  fix-exact.cjs  fix-exact2.cjs  fix-line2638.cjs  fix-movie-bytes.cjs  fix-movie.cjs  fix-movie.js  fix-paren.cjs  fix-paren2.cjs  fix2.py  (+33 more)
src-tauri/: Cargo.toml  build.rs  fix10.py  fix11.py  fix2.py  fix3.py  fix4.py  fix5.py  fix6.py  fix7.py  fix8.py  fix9.py  fix_global.py  fix_global_builtin.py  fix_globalbuiltin.py  fix_html.py  fix_lobster.py  fix_office.py  fix_unicode.py  player.html  tauri.conf.json
src-tauri/capabilities/: default.json  xingshu-skill-remote.json
src-tauri/linux/: close-running-app.sh
src-tauri/resources/: player.html
src-tauri/resources/Star-Office-UI-master/backend/: app.py  requirements.txt
src-tauri/resources/Star-Office-UI-master/electron-shell/: package-lock.json  package.json
src-tauri/resources/agency-agents/: manifest.json
src-tauri/resources/agency-agents/openclaw/agency-3d-scene-developer/: SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-accessibility-auditor/: AGENTS.md  SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-account-strategist/: AGENTS.md  SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-aeo-foundations-architect/: SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-agentic-identity-trust-architect/: AGENTS.md  SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-agentic-search-optimizer/: SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-agents-orchestrator/: AGENTS.md  SOUL.md
src-tauri/resources/agency-agents/openclaw/agency-ai-data-remediation-engineer/: AGENTS.md
src-tauri/resources/agency-agents/openclaw/agency-analytics-reporter/: AGENTS.md  SOUL.md
src-tauri/resources/browser-use/: browser_use_guard.py  profile.json
src-tauri/resources/codex提示词/: codex提示词使用方法.txt  instruction.md
src-tauri/src/: lib.rs  main.rs  tray.rs  utils.rs  windows_proxy.rs
src-tauri/src/commands/: agency_agents.rs  agent.rs  assistant.rs  browser_use.rs  cli_anything.rs  config.rs  device.rs  hermes.rs  memory.rs  messaging.rs  mod.rs  music.rs  openmontage.rs  pairing.rs  proxy.rs  scanner.rs  service.rs  skillhub.rs  skills.rs  star_office.rs  tvbox.rs  update.rs
src-tauri/src/models/: types.rs
src-tauri/windows/: nsis-installer-hooks.nsh
(+514 files in other folders)
