[package]
name = "TuLuOpenClaw"
version = "0.11.5"
edition = "2021"
description = "屠戮OpenClaw - OpenClaw 可视化管理面板"
authors = ["qingchencloud"]
repository = "https://github.com/qingchencloud/TuLuOpenClaw"
homepage = "https://github.com/qingchencloud/TuLuOpenClaw"
license = "AGPL-3.0"

[lib]
name = "TuLuOpenClaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip"], default-features = false }
winreg = { version = "0.55", package = "winreg" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
regex = "1"
tokio = { version = "1", features = ["process", "time"] }
once_cell = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
