[package]
name = "XingShu"
version = "4.3.8"
edition = "2021"
description = "星枢OpenClaw - OpenClaw 可视化管理面板"
authors = ["TuLu"]
repository = "https://github.com/TuLu-openclaw/tulu-openclaw-v2"
homepage = "https://github.com/TuLu-openclaw/tulu-openclaw-v2"
license = "AGPL-3.0"

[lib]
name = "tu_lu_open_claw_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "native-tls"], default-features = false }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
sha1 = "0.10"
md5 = "0.8"
url = "2"
urlencoding = "2"
encoding_rs = "0.8"
regex = "1"
async-recursion = "0.3"
tokio = { version = "1", features = ["process", "time"] }
once_cell = "1"
which = "7"

tar = "0.4"
flate2 = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
